--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,189 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
+html,
+
+body{
+    margin: 0rem;
+    padding: 0rem;
+}
+
+
+h1{
+    text-align: left;
+    font-size: 1rem;
+    font-weight: bold;
+}
+h2{
+    margin-top: -0.5rem;
+    font-size: 0.7rem;
+    color: rgb(164, 164, 100);
+}
+h3{
+    margin: 0;
+    padding-left: 1rem;
+    font-size: 1rem;
+    color: cornsilk;
+    text-transform: capitalize;
+}
+
+h4{
+    font-weight: bold;
+    padding-left: 6rem;
+    font-size: 1rem;
+    color: black;
+}
+p{
+    font-size: 0.8rem;
+    text-transform: capitalize;
+}
+nav {
+    margin: auto;
+   background-color:  rgb(74, 88, 88);
+   padding-top: 0.6rem;
+   padding-bottom: 0.6rem;
+}
+
+ul{
+    display: flex;
+    justify-content:space-evenly;
+    text-transform: capitalize;
+    padding-right: 80rem;
+}
+
+a{
+  text-decoration: none;
+  color:  cornsilk;
+}
+
+ #list-style{
+ font-size: 1.2rem;
+  padding-left: 1rem;
+  list-style-type:none;
+}
+
+button{
+   display: flex;
+   flex-direction: column;
+    border-radius: 0.3rem;
+    border-color:  rgb(102, 138, 102);
+    margin-left: 1.5rem;
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
+    background-color: rgb(102, 138, 102);
+    font-size: 1rem;
+}
+
+section > div img{
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+    width: 25rem;
+    height: auto;
+}
+
+.index-flex-contain{
+  display: flex;
+  justify-content: center;
+}
+
+.beer-button-style{
+  margin-top: 0.5rem;
+  align-items: center;
+  margin-left: 2.9rem;
+  color: cornsilk;
+  text-transform: capitalize;
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.randombeer-button-style{
+    margin-top: 0.9rem;
+    align-items: center;
+    color:  cornsilk;
+    text-transform: capitalize;
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
+}
+
+footer{
+    background-color: rgb(82, 79, 79);
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
+    margin-top: 5rem;
+}
+
+.randombeer-flex-container{
+    padding-top: 2rem;
+    padding-left: 15rem;
+   
+}
+.randombeer-flex-container h1{
+    padding-top: 2rem;
+    padding-left: 6rem;
+    font-size: 1rem;
+}
+
+.randombeer-flex-container h2{
+    padding-left: 6rem;
+}
+
+.randombeer-flex-container ul{
+    display: flex;
+    flex-direction: column;
+    font-size: 0.9rem ;
+    line-height: 1.2rem;
+    padding: 0.5rem;
+    margin-left: 9rem;
+}
+
+.randombeer-flex-container p{
+
+    margin: 1rem;
+    padding-left: 5rem;
+    width: 35%;
+}
+
+.randombeer-flex-container #beer-p{
+    padding-bottom: 1rem;
+    padding-left: 5rem;
+}
+
+.randombeer-flex-container img{
+    padding-top: 2.7rem;
+    height: 40rem;
+    width: auto;
+    float: left;
+}
+
+.randombeer-flex-container footer{
+margin-top: 10rem;
+}
+
+.beer-flex-cont{
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+   padding: 6rem 0 5rem 6rem;
+   width: 90%;
+   gap: 7rem;
+   text-align: justify;
+}
+
+ img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 10rem;
+    width: auto;
+    padding-bottom: 0.5rem;
+  }
+
+#beer-p #beer-images{
+    margin-left: 10rem;
+}
+
+#beer-p{
+    width: 25%;
+}
