--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,10 @@
-<div>
+
+<section class="index-flex-contain">
+    <div>
+    <img src="/images/beer.png" alt="Beer Image">
+  
+        <button class="beer-button-style" onclick="window.location.href='/beers'">Check the Beers</button>
+        <button  class="randombeer-button-style" onclick="window.location.href='/randombeer'">Check Random Beer</button>
 
 </div>
+</section>
